# kindle2keynote

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-run.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  tsconfig.json
config/: default.json
src/: index.ts
src/config/: index.ts
src/generators/: KeynoteGenerator.ts  MarkdownGenerator.ts
src/kindle2keynote/: __init__.py  main.py  marp_converter.py  pdf_extractor.py
src/pdf2keynote/: config.py  exceptions.py  main.py  marp_converter.py  pdf_extractor.py
src/processor/: TextProcessor.ts
src/scraper/: BaseScraper.ts  DockerKindleScraper.ts  KindleScraper.ts
src/types/: index.ts
tests/: __init__.py  test_marp_converter.py  test_pdf_extractor.py
