[project]
name = "kindle2keynote"
version = "0.1.0"
description = "Convert PDF ebooks to Marp presentation slides using AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "openai>=2.8.1",
    "google-generativeai>=0.8.5",
    "google-genai>=1.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
kindle2keynote = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle2keynote"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
